corrected link spacing in connect card

--- a/src/App.css
+++ b/src/App.css
@@ -187,6 +187,14 @@ h5 {
   #responsBrk{
     padding-top: 40px;
   }
+
+  #about {
+    padding: 10px;
+  }
+
+  .link-connect {
+    margin-right: 10px;
+  }
   
 }
 
